--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
 
-        <a href="#"><img src="images/logo.png" class="logo" alt="logo"></a>
+        <a href="#"><img src="logo.png" class="logo" alt="logo"></a>
 
         <nav class="nav_bar" >
             <a href="#" >Home</a>
@@ -33,8 +33,8 @@
 
                    
             <div class="images">
-                <img src="images/shape.png" alt="shape-img">
-                <img src="images/Jiten_Image.png" alt="Jiten-img">
+                <img src="shape.png" alt="shape-img">
+                <img src="Jiten_Image.png" alt="Jiten-img">
             </div>
 
 
